refactor for new folder structure